feat(后端):初步实现双选系统框架
